fixbug on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,8 +36,6 @@ input {
 }
 
 .header.header-fixed {
-    position: relative;
-    overflow-x: clip;
     position: sticky;
     top: 0;
     z-index: 97;
@@ -125,26 +123,27 @@ input {
         top: 0;
         width: 100vw;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.17);
+        background: rgba(0, 0, 0, 0.07);
         z-index: 98;
         opacity: 0;
         visibility: hidden;
-        transition-duration: 0.4s;
+        transition-duration: 0.5s;
     }
 
     .nav {
-        position: absolute;
+        position: fixed;
         right: -100%;
         top: 0;
         flex-direction: column;
         width: 70vw;
         height: 100vh;
         background: #fff;
-        transition-duration: 0.4s;
+        transition-duration: 0.5s;
         box-shadow: -6px 0px 26px 6px rgba(0, 0, 0, 0.17);
         -webkit-box-shadow: -6px 0px 26px 6px rgba(0, 0, 0, 0.17);
         -moz-box-shadow: -6px 0px 26px 6px rgba(0, 0, 0, 0.17);
         z-index: 99;
+        opacity: 0;
     }
 
     .nav__item {
@@ -161,6 +160,7 @@ input {
 
     #checkbox:checked ~ .nav {
         right: 0;
+        opacity: 1;
     }
 
     #checkbox:checked ~ .blur {
